--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/anthule.jpg" type="image/x-icon" >
+    <title>An music</title>
+    <link rel="stylesheet" href="css/index_style.css">
+</head>
+<body>
+    <header class = 'main-header'>
+        <nav class = 'nav main-nav'>
+            <ul>
+                <li><a href="index.html" > HOME  </a></li>
+                <li><a href="reviews.html"> REVIEWS </a> </li>
+            </ul>
+        </nav>
+        <h1 class = 'an-name an-name-large'>AN MUSIC</h1>
+    </header>
+    <main>
+        <section class = 'container content-section'>
+            <h2 class = 'section-header'> My favorite musicians </h2>
+            <div class = artist-items>
+                <div class = 'artist-item'>
+                    <img src="images/double2t.jpg" alt="double2t"
+                    class="artist-item-image"
+                    >
+                    <h4>Double2T</h4>
+                </div>
+                <div class = 'artist-item'>
+                    <img src="images/RAPPER-TRẦN-HUYỀN-DIỆP02.jpg" alt="soobin"
+                    class="artist-item-image"
+                    >
+                    <h4>Trần Huyền Diệp</h4>
+                </div>
+            </div>
+            <script src="script.js"></script>
+
+        </section>
+        
+    </main>
+    
+</body>
+</html>
