--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h4>Trần Huyền Diệp</h4>
                 </div>
             </div>
-            <script src="script.js"></script>
+            <!-- <script src="script.js"></script> -->
 
         </section>
         
