--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
             <h2 class = 'section-header'> My favorite musicians </h2>
             <div class = artist-items>
                 <div class = 'artist-item'>
-                    <img src="images/double2t.jpg" alt="double2t"
-                    class="artist-item-image"
-                    >
-                    <h4>Double2T</h4>
+                    <a href="double2t.html" >
+                        <img src="images/double2t.jpg" alt="double2t"
+                        class="artist-item-image"
+                        >
+                        <h4>Double2T</h4>
+                    </a>
                 </div>
                 <div class = 'artist-item'>
                     <img src="images/RAPPER-TRẦN-HUYỀN-DIỆP02.jpg" alt="soobin"
