trần huyền diệp

--- a/double2t.html
+++ b/double2t.html
@@ -21,12 +21,14 @@
     <main>
         <section class = 'container content-section'>
             <h2 class = 'section-header'> Double2T </h2>
-            <img src="images/double2t_5.jpg" alt="double2t" class="about-image">
+            <img src="images/double2t_5.jpg" alt="double2t" 
+            class="about-image">
             
             <div>
-                <p>
-                    Double2T nổi tiếng với các bản nhạc đậm chất miền núi. Anh là 
-                    một trong những nghệ sĩ đầu tiên kết hợp rap với nhạc dân tộc.
+                <p> Mình chưa bao giờ là người thích nghe nhạc Rap,
+                    cho đến khi mình nghe bài "À Lôi" của Double2T. Mình không 
+                    ngờ là Rap lại có thể hay đến vậy.
+                    
                 </p>
                 <p>
                     Bài "À Lôi" là bản hit tiêu biểu nhất cho phong cách âm nhạc
@@ -66,16 +68,20 @@
                 </p>
                 <p>
                     Nội dung bài hát của anh thường kể về những câu chuyện về tình yêu 
-                    về chàng trai thành phố và cô gái miền núi (như trong bài "À Lôi").
-                    Nhưng thực ra thì anh là người Kinh, quê ở thôn Bản Lai, tỉnh Tuyên Quang.
-                    Thời thơ ấu của anh không có điện, internet. Anh phải đi bộ 2-3km 
+                    về chàng trai thành phố và cô gái miền núi (như trong bài "À Lôi"), hoặc 
+                 về những con người miền núi 'chất' (như trong bài 'Người miền núi chất').
+                 Khung cảnh trong MV thường là những ngôi làng ở miền núi, với thiên nhiên 
+                 đẹp hùng vĩ, và con người với nét đẹp hoang dã, chân chất.
+
+                </p>
+                <p>
+                    Trong bài phỏng vấn gần đây <a href="https://muctim.tuoitre.vn/quan-quan-rap-viet-double2t-tu-hao-la-nguoi-mien-nui-chat-1012309191009494.htm" > Mực tím </a>,
+                     thời thơ ấu của anh không có điện, internet. Anh phải đi bộ 2-3km 
                     để đến trường tiểu học và 10km để đến trường cấp 2. Chỉ khi lên cấp 3,
                     ở gần cổng trường có quán net, anh đã vào đó và biết đến rap. 
                      Xung quanh anh 
                     không có ai thích rap, nên anh thường học hỏi theo các đàn anh trên Youtube 
-                    như BigDaddy, JustaTee, B Ray. Anh thích rap về những con người miền núi 
-                    mạnh mẽ vươn lên, và luôn giữ được chất riêng, những thói quen đẹp của mình.
-                </p>
+                    như BigDaddy, JustaTee, B Ray. </p>
                 <p> 
                     Nói tóm lại, âm nhạc của Double2T mang một tâm hồn đặc sắc của vung núi,
                     khiến cho mọi người trở nên tò mò và muốn khám phá những miền đất 
