--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                     </a>
                 </div>
                 <div class = 'artist-item'>
-                    <img src="images/RAPPER-TRẦN-HUYỀN-DIỆP02.jpg" alt="soobin"
-                    class="artist-item-image"
-                    >
-                    <h4>Trần Huyền Diệp</h4>
+                    <a href ="tran-huyen-diep.html">
+                        <img src="images/RAPPER-TRẦN-HUYỀN-DIỆP02.jpg" alt="soobin"
+                        class="artist-item-image">
+                        <h4>Trần Huyền Diệp</h4>
+                    </a>
                 </div>
             </div>
             <!-- <script src="script.js"></script> -->
