--- a/tran-huyen-diep.html
+++ b/tran-huyen-diep.html
@@ -36,7 +36,9 @@
                     tiếng côn trùng râm ran. Khung cảnh này gợi trí tò mò
                     của người nghe, đi vào thế giới huyền bí của Trần Huyền Diệp.
                 </p>
-                <img src="images/ready.jpg" alt="ready" class="illustration-image">
+              <a href="https://www.youtube.com/watch?v=Zk8K2qymbKQ">
+                  <img src="images/ready.jpg" alt="ready" class="illustration-image">
+              </a>
                 <p> 
                     Về giọng rap, cô nàng có thể rap theo kiểu gắt gỏng, mạnh mẽ
                     nhưng cũng có thể rap theo kiểu nhẹ nhàng, an ủi.
